Move the section about three logics to the appendix

--- a/doc/paper/paper.tex
+++ b/doc/paper/paper.tex
@@ -139,6 +139,8 @@
 \todo[inline,caption={}]{
   For the entire paper:
   \begin{itemize}
+    \item Perhaps I can list the `authors contributed equally' statement as part
+          of Funding. Check K's recent papers.
     \item Finish adding DOIs or URLs to (non-book) references (and reformatting
           indentation) (and check reference formatting) (is the part about
           non-book references correct? Check previous proceedings) (maybe one
@@ -310,83 +312,6 @@ literals.
   quantifiers at the front~\cite{hinman2018fundamentals}, the format we describe
   has proven itself convenient to work with.
 \end{remark*}
-
-\subsection{The Three Logics of FOMC}\label{sec:threelogics}
-
-% \begin{table*}[t]
-%   \centering
-%   \begin{tabular}{llclll}
-%     \toprule
-%     Logic & Sorts & Constants & Variables & Quantifiers & Additional atoms\\
-%     \midrule
-%     \FO & one or more & \cmark & unlimited & $\forall$, $\exists$ & $x = y$\\
-%     \Ctwo & one & \xmark & two & $\forall$, $\exists$, $\exists^{= k}$, $\exists^{\le k}$, $\exists^{\ge k}$ & ---\\
-%     \UFO & one & \xmark & two & $\forall$ & $|P| = m$\\
-%     \bottomrule
-%   \end{tabular}
-%   \caption{A comparison of the three logics used in FOMC\@. The
-%     2\textsuperscript{nd}--5\textsuperscript{th} columns refer to: the number of
-%     sorts, support for constants, the maximum number of variables, and supported
-%     quantifiers, respectively. The last column lists supported atoms in addition
-%     to those of the form $P(\mathbf{t})$ for a predicate $P/n$ and an $n$-tuple
-%     of terms $\mathbf{t}$. Here: $k$ and $m$ are non-negative integers, with the
-%     latter depending on the domain size, $P$ represents a predicate, and $x$ and
-%     $y$ are terms. }\label{tbl:logics}
-% \end{table*}
-
-\renewcommand*{\thefootnote}{\fnsymbol{footnote}}
-
-There are three first-order logics commonly used in FOMC: \FO{}, \Ctwo{}, and
-\UFO{}. First, \FO{} is the input format for
-\textsc{ForcLift}\footnote{\url{https://github.com/UCLA-StarAI/Forclift}} and
-its extensions
-\textsc{Crane}\footnote{\url{https://doi.org/10.5281/zenodo.8004077}} and
-\Cranetwo{}. Second, \Ctwo{} is often used in the literature on
-\textsc{FastWFOMC}\footnote{\url{https://github.com/jan-toth/FastWFOMC.jl}} and
-related methods~\cite{DBLP:journals/jair/Kuzelka21,DBLP:conf/aaai/MalhotraS22}.
-Finally, \UFO{} is the input format supported by the most recent implementation
-of \textsc{FastWFOMC}~\cite{tóth2024complexityweightedfirstordermodel}. All
-three logics are function-free, and domains are always assumed to be finite. As
-usual, we presuppose the \emph{unique name assumption}, which states that two
-constants are equal if and only if they are the same
-constant~\cite{DBLP:books/aw/RN2020}.
-
-\renewcommand*{\thefootnote}{\arabic{footnote}}
-
-In \FO{}, each term is assigned to a \emph{sort}, and each predicate $P/n$ is
-assigned to a sequence of $n$ sorts. Each sort has its corresponding domain.
-These assignments to sorts are typically left implicit and can be reconstructed
-from the quantifiers. For example, $\forall x,y \in \Delta\text{. }P(x, y)$
-implies that variables $x$ and $y$ have the same sort. On the other hand,
-$\forall x \in \Delta\text{. }\forall y \in \Gamma\text{. } P(x, y)$ implies
-that $x$ and $y$ have different sorts, and it would be improper to write, for
-example, $\forall x \in \Delta\text{. }\forall y \in \Gamma\text{.
-} P(x, y) \lor x = y$. \FO{} is also the only logic to support constants,
-formulas with more than two variables, and the equality predicate. While we do
-not explicitly refer to sorts in subsequent sections of this paper, the
-many-sorted nature of \FO{} is paramount to the algorithms presented therein.
-
-\begin{remark*}
-  In the case of \textsc{ForcLift} and its extensions, support for a formula as
-  valid input does not imply that the algorithm can compile the formula into a
-  circuit or graph suitable for lifted model counting. However, it is known that
-  \textsc{ForcLift} compilation is guaranteed to succeed on any \FO{} formula
-  without constants and with at most two
-  variables~\cite{DBLP:conf/nips/Broeck11,DBLP:conf/kr/BroeckMD14}.
-\end{remark*}
-
-Compared to \FO{}, \Ctwo{} and \UFO{} lack support for constants, the equality
-predicate, multiple domains, and formulas with more than two variables. The
-advantage that \Ctwo{} brings over \FO{} is the inclusion of \emph{counting
-  quantifiers}. That is, alongside $\forall$ and $\exists$, \Ctwo{} supports
-$\exists^{=k}$, $\exists^{\le k}$, and $\exists^{\ge k}$ for any positive
-integer $k$. For example, $\exists^{=1} x\text{. }\phi(x)$ means that there
-exists \emph{exactly one} $x$ such that $\phi(x)$, and $\exists^{\le 2} x\text{.
-}\phi(x)$ means that there exist \emph{at most two} such $x$. \UFO{}, on the
-other hand, does not support any existential quantifiers but instead
-incorporates \emph{(equality) cardinality constraints}. For example, $|P| = 3$
-constrains all models to have \emph{precisely three positive literals with the
-  predicate $P$}.
 
 \subsection{First-Order Model Counting}
 
@@ -1067,9 +992,6 @@ return it.
 
 \section{Experimental Evaluation}\label{sec:experiments}
 
-\todo[inline]{Expand the section, adding a more thorough and independent
-  practical assessment}
-
 Our empirical evaluation sought to compare the runtime performance of
 {\Cranetwo} with the current state of the art, namely \textsc{FastWFOMC} and
 \textsc{ForcLift}. It is worth remarking that \textsc{ForcLift} does not support
@@ -1089,7 +1011,6 @@ while the other algorithms were executed on the Java Virtual Machine 1.8.0\_201.
 
 \todo[inline,caption={}]{
   \begin{itemize}
-    \item More benchmarks from NOT my work
     \item Make sure it's clear what the `raw' instances are
     \item Don't emphasise that the benchmarks come from my previous work
     \item Integrate the example below into the text, possibly moving irrelevant
@@ -1158,7 +1079,8 @@ where $w^{-}(R) = w^{-}(S) = -1$.
     that both axes are on a logarithmic scale.}\label{fig:plot}
 \end{figure*}
 
-\todo[inline]{Shrink/restructure to fit into the margins}
+\todo[inline]{Add lines of best fit (and comment on them) to expand this section
+  a bit?}
 
 The three benchmark families cover a wide range of possibilities. The
 `friends' benchmark stands out as it uses multiple predicates and can be
@@ -1244,5 +1166,93 @@ further analysed using fine-grained complexity, which would provide more
 detailed insights into the computational demands of different formulas.
 
 \bibliography{paper}
+
+\appendix
+\section{The Three Logics of FOMC}\label{sec:threelogics}
+
+\begin{table}[t]
+  \centering
+  \begin{tabular}{llclll}
+    \toprule
+    Logic & Sorts & Constants & Variables & Quantifiers & Additional atoms\\
+    \midrule
+    \FO & one or more & \cmark & unlimited & $\forall$, $\exists$ & $x = y$\\
+    \Ctwo & one & \xmark & two & $\forall$, $\exists$, $\exists^{= k}$, $\exists^{\le k}$, $\exists^{\ge k}$ & ---\\
+    \UFO & one & \xmark & two & $\forall$ & $|P| = m$\\
+    \bottomrule
+  \end{tabular}
+  \caption{A comparison of the three logics used in FOMC\@. The
+    2\textsuperscript{nd}--5\textsuperscript{th} columns refer to: the number of
+    sorts, support for constants, the maximum number of variables, and supported
+    quantifiers, respectively. The last column lists supported atoms in addition
+    to those of the form $P(\mathbf{t})$ for a predicate $P/n$ and an $n$-tuple
+    of terms $\mathbf{t}$. Here: $k$ and $m$ are non-negative integers, with the
+    latter depending on the domain size, $P$ represents a predicate, and $x$ and
+    $y$ are terms. }\label{tbl:logics}
+\end{table}
+
+\todo[inline,caption={}]{
+  \begin{itemize}
+    \item Reference the table
+    \item Delete references to this appendix (except for one place, probably in
+          \cref{sec:experiments})
+    \item Make sure the rest of the paper doesn't refer to these logics (or
+          describe examples in them)
+  \end{itemize}
+}
+
+\renewcommand*{\thefootnote}{\fnsymbol{footnote}}
+
+There are three first-order logics commonly used in FOMC: \FO{}, \Ctwo{}, and
+\UFO{}. First, \FO{} is the input format for
+\textsc{ForcLift}\footnote{\url{https://github.com/UCLA-StarAI/Forclift}} and
+its extensions
+\textsc{Crane}\footnote{\url{https://doi.org/10.5281/zenodo.8004077}} and
+\Cranetwo{}. Second, \Ctwo{} is often used in the literature on
+\textsc{FastWFOMC}\footnote{\url{https://github.com/jan-toth/FastWFOMC.jl}} and
+related methods~\cite{DBLP:journals/jair/Kuzelka21,DBLP:conf/aaai/MalhotraS22}.
+Finally, \UFO{} is the input format supported by the most recent implementation
+of \textsc{FastWFOMC}~\cite{tóth2024complexityweightedfirstordermodel}. All
+three logics are function-free, and domains are always assumed to be finite. As
+usual, we presuppose the \emph{unique name assumption}, which states that two
+constants are equal if and only if they are the same
+constant~\cite{DBLP:books/aw/RN2020}.
+
+\renewcommand*{\thefootnote}{\arabic{footnote}}
+
+In \FO{}, each term is assigned to a \emph{sort}, and each predicate $P/n$ is
+assigned to a sequence of $n$ sorts. Each sort has its corresponding domain.
+These assignments to sorts are typically left implicit and can be reconstructed
+from the quantifiers. For example, $\forall x,y \in \Delta\text{. }P(x, y)$
+implies that variables $x$ and $y$ have the same sort. On the other hand,
+$\forall x \in \Delta\text{. }\forall y \in \Gamma\text{. } P(x, y)$ implies
+that $x$ and $y$ have different sorts, and it would be improper to write, for
+example, $\forall x \in \Delta\text{. }\forall y \in \Gamma\text{.
+} P(x, y) \lor x = y$. \FO{} is also the only logic to support constants,
+formulas with more than two variables, and the equality predicate. While we do
+not explicitly refer to sorts in subsequent sections of this paper, the
+many-sorted nature of \FO{} is paramount to the algorithms presented therein.
+
+\begin{remark*}
+  In the case of \textsc{ForcLift} and its extensions, support for a formula as
+  valid input does not imply that the algorithm can compile the formula into a
+  circuit or graph suitable for lifted model counting. However, it is known that
+  \textsc{ForcLift} compilation is guaranteed to succeed on any \FO{} formula
+  without constants and with at most two
+  variables~\cite{DBLP:conf/nips/Broeck11,DBLP:conf/kr/BroeckMD14}.
+\end{remark*}
+
+Compared to \FO{}, \Ctwo{} and \UFO{} lack support for constants, the equality
+predicate, multiple domains, and formulas with more than two variables. The
+advantage that \Ctwo{} brings over \FO{} is the inclusion of \emph{counting
+  quantifiers}. That is, alongside $\forall$ and $\exists$, \Ctwo{} supports
+$\exists^{=k}$, $\exists^{\le k}$, and $\exists^{\ge k}$ for any positive
+integer $k$. For example, $\exists^{=1} x\text{. }\phi(x)$ means that there
+exists \emph{exactly one} $x$ such that $\phi(x)$, and $\exists^{\le 2} x\text{.
+}\phi(x)$ means that there exist \emph{at most two} such $x$. \UFO{}, on the
+other hand, does not support any existential quantifiers but instead
+incorporates \emph{(equality) cardinality constraints}. For example, $|P| = 3$
+constrains all models to have \emph{precisely three positive literals with the
+  predicate $P$}.
 
 \end{document}
